src/test/deca/test_lex/invalid/invalid/include_bloc_mot_reserve.deca
// Description:
//    Include un mot réservé en deux parties séparées.
//    Le lexeur produit l'identifieur printl.
//    Une inclusion de fichier ne produit pas directement de lexème, mais change temporairement le fichier
//    d’entrée : le fichier passé en argument du #include est lu, puis la lecture reprend après le #include
//    quand le fichier inclus est terminé.
//    [Lexicographie], Inclusion de fichier, p55
//
// Resultats:
//    Lexeur réussit.
//    Erreur de parseur sur printl.
//
// Historique:
//    cree le 05/01/2022

#include "include_bloc_mot_reserve1.decah"
#include "include_bloc_mot_reserve2.decah"